@@ -26,6 +26,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|cloud
+operator|.
+name|ZkStateReader
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|params
 operator|.
 name|SolrParams
@@ -83,6 +99,10 @@ DECL|field|lastPublished
 specifier|volatile
 name|String
 name|lastPublished
+init|=
+name|ZkStateReader
+operator|.
+name|ACTIVE
 decl_stmt|;
 DECL|method|getLastPublished
 specifier|public
