@@ -5138,6 +5138,11 @@ else|:
 literal|null
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|updateLastState
+condition|)
+block|{
 name|cd
 operator|.
 name|getCloudDescriptor
@@ -5147,6 +5152,7 @@ name|lastPublished
 operator|=
 name|state
 expr_stmt|;
+block|}
 name|overseerJobQueue
 operator|.
 name|offer
@@ -6268,7 +6274,7 @@ parameter_list|)
 block|{
 specifier|final
 name|String
-name|shardZkNodeName
+name|coreNodeName
 init|=
 name|getCoreNodeName
 argument_list|(
@@ -6299,7 +6305,7 @@ argument_list|()
 operator|.
 name|getShardId
 argument_list|(
-name|shardZkNodeName
+name|coreNodeName
 argument_list|)
 decl_stmt|;
 if|if
@@ -6353,7 +6359,7 @@ name|coreName
 operator|+
 literal|" coreNodeName:"
 operator|+
-name|shardZkNodeName
+name|coreNodeName
 argument_list|)
 throw|;
 block|}
@@ -6788,16 +6794,43 @@ argument_list|,
 name|ZkStateReader
 operator|.
 name|DOWN
+argument_list|,
+literal|false
 argument_list|)
 expr_stmt|;
 name|String
-name|shardZkNodeName
+name|coreNodeName
 init|=
 name|getCoreNodeName
 argument_list|(
 name|cd
 argument_list|)
 decl_stmt|;
+comment|// make sure the node name is set on the descriptor
+if|if
+condition|(
+name|cd
+operator|.
+name|getCloudDescriptor
+argument_list|()
+operator|.
+name|getCoreNodeName
+argument_list|()
+operator|==
+literal|null
+condition|)
+block|{
+name|cd
+operator|.
+name|getCloudDescriptor
+argument_list|()
+operator|.
+name|setCoreNodeName
+argument_list|(
+name|coreNodeName
+argument_list|)
+expr_stmt|;
+block|}
 if|if
 condition|(
 name|cd
@@ -6819,7 +6852,7 @@ operator|.
 name|getClusterState
 argument_list|()
 argument_list|,
-name|shardZkNodeName
+name|coreNodeName
 argument_list|)
 condition|)
 block|{
